--- a/commissions.html
+++ b/commissions.html
@@ -377,6 +377,13 @@ these are just some collage examples of the aesthetics i'm used to. my website r
 the index page and 404 page are for free. i'll also provide you a blank page in case you want to go further by yourself !<br>
 initially i'll make the index an example page for you with some cute graphics and codes i am going to provide !<br>
 all the text will be edited later on, as you wish.<br>
+<br><br>
+<font color="#e2c993" style="font-size:9px">♡</font>　are you interested ? please contact me through the <a id="linkzinho" href="/contact"><font color="#b7a596">contact form</font></a> or :<br><br>
+　　<font color="#bfa57a" style="font-size:10px">discord :</font> @ puf#0829<br>
+　　<font color="#bfa57a" style="font-size:10px">tumblr :</font> @ pufti<br>
+　　<font color="#bfa57a" style="font-size:10px">twitter :</font> @ sofffti<br>
+　　<font color="#bfa57a" style="font-size:10px">instagram :</font> @ soffftie<br>
+
 <br>
 
 <br><br><br>
