--- a/commissions.html
+++ b/commissions.html
@@ -372,7 +372,7 @@ these are just some collage examples of the aesthetics i'm used to. my website r
 　<font color="#e2c993" style="font-size:10px">layout :</font>　$ 30 american dollars<br><br>
 　<font color="#e2c993" style="font-size:10px">each page :</font>　$ 5 american dollars<br><br>
 
-　important : payment must be made through paypal or <a id="linkzinho" href="https://ko-fi.com/middlepot" target="_blank"><font color="#b7a596">ko-fi</font></a>.
+　payment must be made through paypal ( middlepot@gmail.com ) or <a id="linkzinho" href="https://ko-fi.com/middlepot" target="_blank"><font color="#b7a596">ko-fi</font></a>.
 <br><br>
 the index page and 404 page are for free. i'll also provide you a blank page in case you want to go further by yourself !<br>
 initially i'll make the index an example page for you with some cute graphics and codes i am going to provide !<br>
