--- a/links.html
+++ b/links.html
@@ -55,9 +55,7 @@ background-color: #f9f0ed;
 border: 1px dotted #e2d5d0;
 }
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-</style>
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
 
 <!--
 tooooooooltip
@@ -272,9 +270,7 @@ z-index: 3;
 <img src="https://i.imgur.com/Jm86w3I.png"/>
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
-
-　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
@@ -307,6 +303,8 @@ z-index: 3;
 <sub><sub><img src="https://i.imgur.com/z2FwsNG.png"></sub></sub><font color="#c1a98b">
  html stuff :</font><br><br>
 <div style="width: 110px; height: 50px; overflow-x:hidden;">
+<a id="ooo" title="ideal ib simulation" href="https://pufchan.fr.to" target="_blank" >pufchan.fr.to</a>
+<br>
 <a id="ooo" title="ragnarok online scenarios" href="https://kafra.ro.lt" target="_blank" >kafra.ro.lt</a>
 <br>
 <a id="ooo" title="my first layout ever" href="https://kawaii.info.gf" target="_blank" >kawaii.info.gf</a>
