--- a/blog.html
+++ b/blog.html
@@ -317,6 +317,94 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/4VMQGEr.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>april . 30 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <img src="https://i.imgur.com/6bJBd0e.gif"/><br>
+have you been doing your best ?<br>
+i've been.. doing a lot ...<br>
+i finally opened commissions for website layouts, as you can see on the index page !<br>
+i really love web design, but i never felt really like people would really want to pay for my work..<br>
+well, after receiving so many questions about my website and how i make it, i decided to open myself to it and did my first commission ♡ !!!<br>
+i'm really proud of myself, now i can work hard to make people happy in other ways besides my current projects.<br>
+<br>
+i also opened a <a id="linkzinho" href="https://ko-fi.com/middlepot" style="text-decoration: none; color:#d16e9b;" target="_blank">ko-fi</a> account, since i really am in need of some money right now for buying a new laptop.. it's been hard working with it, but i'm doing my best ; ;<br>
+i have some active projects rn and some more to come that i'm working with, so if you like any of my works please consider supporting me.. ! it would mean the world to me, and help a whole lot.<br>
+remember you can now also support me by buying a <a style="text-decoration: none; color:#d16e9b;" id="linkzinho" href="https://middlepot.com/commissions" target="_blank">layout commission</a> or if you're from brazil, buying something from my <a id="linkzinho" href="https://shybunny.middlepot.com" style="text-decoration: none; color:#d16e9b;" target="_blank">online store</a> !<br>
+( you can also buy small items on the shy bunny store if you live overseas, just please consider the long delivery time )<br>
+<br>
+i appreciate a lot all the supporting messages i receive from you all and i want to keep going with my current works, even if most of them don't give me any profit, i still keep going with all my love and dedication <img src="https://i.imgur.com/OhHUZZE.gif"/><br>
+i know some of my projects have been stagnant, but i'm not giving up on them, don't worry !<br>
+i'm just focusing on my main ones right now, but i will surely take some time for everything i planned.<br>
+if you want to see something specifically here or in my accs, please contact me and i will certainly consider it ♡<br>
+<br>
+eee now, i have today a very cute html page i've been wanting to do for.. a week LOL<br>
+it's "my simulation of the perfect imageboard for me"<br>
+i out of nowhere wanted to do it because i was remembering all the time i spent on imageboards when i was younger and i always wanted to make a cute and positive one ~<br>
+( i don't think people would even enter it actually, it's too girly )<br>
+by the way, the q&a today will be about imageboards ! i wanted to talk about it because most people don't really understand the point of these sites and think they're just bad, but it's not really like that.<br>
+it's complicated, and i stopped using them for a long time now, but i certainly miss exchanging content and stories with all the interesting people i could find on the weirdest boards !<br>
+i specially liked threads about "trying to find" specific content or observing bizarre communities... these became renegade thread themes on ibs over time, and i don't know why, since these were so much fun ??<br>
+people seem to only like talking about boring stuff now.. ughie <img src="https://i.imgur.com/dATVv1g.gif"/><br>
+well, enough of talking, here :<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/soq1kPL.png"/></center><br>
+<center><img width="350px" height="auto" src="https://i.imgur.com/K0ScsP4.png"/></center><br>
+<center><img width="350px" height="auto" src="https://i.imgur.com/jVjbILC.png"/></center><br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/nq4oo2.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">pufchan .rar</font></a>　</center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+i think pufchan is adorable ..<br>
+it's obviously a fake imageboard, you can't post anything, it's just visuals !<br>
+the layout is inspired by futaba, which i believe it's the first "chan". i love the 90s look of it, despite it being born in 2001 ♡<br>
+i'm sorry about my weird japanese, i just wanted to make some inside jokes there LOL<br>
+i was not very creative about the domain this time, but here we go : pufchan.fr.to<br>
+<br>
+do you like it ? would you use it ?<br>
+only cuteness allowed <img src="https://i.imgur.com/uFeVUJn.gif"/><br>
+<br>
+now let's go to the q&a and continue the subject..<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+
+i have seen many people saying that imageboards are toxic and hateful environments. i have had particularly varied experiences in such environments, not just ibs but other places that are also open to different subjects, and because these are anonymous environments, it is easy to see people saying hateful thoughts...
+such people may or may not have gone through difficult things in life and they feel the need to vent terrible things on the internet. i consider myself a very patient person with open environments like this, because i've already been able to talk about very interesting and fun subjects with good-hearted people in places like this. it is possible to have good experiences !
+currently, i have found it VERY difficult to find good content, as these places have become the focus of hate texts. i definitely do not support or pay attention to this sort of thing, since it doesn't do any good for anyone.
+i used to go to these places with some frequency because it was easy to find ibs where the anonymity was absolute, that is, it was not spoken in gender or any subject that revealed particularities about the users. this avoided most of the unpleasant and problematic issues, leaving room for healthy and interesting discussions. i learned a lot and met very nice people in these spaces. unfortunately, it is a rarity now, and so i consider that the ibs are dead practically all over the world.
+many people say they see clear rejections in specific places against groups of people. this is real, but not just in anonymous places, i've seen it all over the internet ( and out of it too ) !!
+something very common to see is the classic boys x girls, right x left and other things like that ; ;
+if you pay attention, you will find all sorts of people rejecting and avoiding contact with other types of people, because they had bad experiences multiple times. this is basically it. i believe that any passive or aggressive rejection against people by their sex, beliefs, tastes, thoughts, is the fruit of past bad experiences. i don't like to judge people by such attitudes as long as they can be understanding, i think no one need to accept interactions with people who don't want to, i think it's important to respect environments made for a specific type of audience. i've never disrespected public rules anywhere because it seems to me too immature to force your presence into places where you're not welcome just to be "edgy" or "revolutionary" ; it's disrespectful to use personal information as an advantage in anonymous places, i don't support this. but obviously i can't stand threatenings or hate texts, as this is sick and negative, i don't like any toxic environment !
+i really value respect among people and believe that anonymity should serve to make people "impartial" and away from judgments, to say what they really think, so that it can be productive for the personal development of everyone. it is possible to exchange good arguments and spend good moments of entertainment and learning with people if they respect each other and don't judge for personal details. i believe that anonymity makes environments nicer for complicated topics, an environment becomes pure from the moment people don't have personal information about each other.
+please don't be hateful, please don't be mean !! it's hard to deal with differences, but people are not supposed to hate each other. everyone is different and have problems, and that's okay. you don't have to interact with people you don't like, but it's not right to write hate texts ; ;
+so i support anonymous discussion environments, and the respect. my good experiences were much more relevant than the bad ones, although i had a hard time finding interesting subjects on the internet, i know it's possible !
+unfortunately the ibs have become a very dirty place in recent years, frequented by frustrated teenagers who want to feel special and part of some sort of "secret movement" that rules the world through memes... seriously. although i believe myself in the power of memes and the internet, using it to feel better than others is pathetic.
+and, fortunately, i still know other places on the internet that are good for that kind of healthy interaction that i quoted above ♡ ! there are not many, but i really like them. things really are temporary, so it's not healthy to keep complaining, right ?
+by the way i really don't care about the reputation of the places on the internet, to be honest, so i'm always open to experiencing things before judging them by the contents that spread out there. for example, tumblr has a very dubious and embarrassing reputation, but i have used it for many years and absolutely love the beautiful and interesting content that i find exclusively there. people simply should try before saying anything.
+</pre>
+<br>
+mm.. people can be very judgmental with some places on the internet without any real experience so i think it's fair to give my opinions about it !<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/UnX4t5Q.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/4VMQGEr.gif"/></center>
+
+<br><br><br>
+
 
 <center><img src="https://i.imgur.com/svKT8no.png"/></center>
 <br><br>
@@ -529,97 +617,6 @@ xoxo <img src="https://i.imgur.com/PinvYCN.gif"/><br>
 
 <br><br><br>
 
-<center><img width="200px" height="auto" src="https://i.imgur.com/1ZLDltw.png"/><img width="200px" height="auto" src="https://i.imgur.com/1ZLDltw.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>january . 22 . 2019</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiiii fluffies <img src="https://i.imgur.com/xurNJep.gif"/><br>
-it's 2019 !!!<br>
-i hope this year is full of happy memories for all of us ♡<br>
-i took a while to have the energy to do this post, i'm in a bad phase ; ;<br>
-summer is a hard time for me, especially when it comes to sleep ..<br>
-my sleep routine is a mess, i'm tired all day <img src="https://i.imgur.com/Oo6x07s.gif"/><br>
-i want to improve it.. i want to feel more energetic so i can do my projects !!<br>
-<br>
-anyway, i'm feeling happy ♡<br>
-i went through some sad moments but with the support of my loved ones i was able to overcome all this and to learn many things <img src="https://i.imgur.com/XBEw3Wi.gif"/><br>
-i know all difficulties are important because it's with them that we face problems, fears and insecurities and we improve !!!<br>
-if you are going through something hard now, remember this.. everything will be better soon !<br>
-<br>
-i have today to show you a collage that i'm very proud of <img src="https://i.imgur.com/piFKEDh.gif"/><br>
-i've been saving images with this aesthetic for a loooong time, i love this theme of strawberries and hearts ♡ !<br>
-<br><br>
-
-<center><img width="350px" height="auto" src="https://i.imgur.com/jxvycdQ.png"/></center>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/x3u0nk.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">strawberry valentine html .rar</font></a>　</center>
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br>
-valentine's day is coming so red and pink are important colors at the moment !!!<br>
-don't forget to use this time to spread love and take care of yourself <img src="https://i.imgur.com/zYcEkWe.gif"/><br>
-<br>
-lately for being with low energy, i didn't do many things ; ;<br>
-but i'm super into dress up games, so i spent a lot of time playing with them !<br>
-these entertain me for hours .. <img src="https://i.imgur.com/VTHXdXA.gif"/><br>
-i want to show you my favorite "me" of the moment ///<br>
-<br><br>
-
-<center><img width="350px" height="auto" src="https://i.imgur.com/OMqmwT8.png"/></center>
-
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br>
-so.. double q&a !!<br>
-the first one will be a complement to something i've written before, about age regression. the second one will be about "role in life" ♡<br>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
-<br><br>
-　ଢ ⅰ<br>
-i've been thinking about age regression lately, because i really am into all kind of age regression activities and stuff.. but i still know that i don't really age regress, because i'm always like it.<br>
-i don't really feel a difference when i'm coloring or eating using a cute spoon, because it's just my personality. i could say everytime i'm feeling comfy i'm regressed, but i don't really feel it as a thiiing, because it's just who i am.. !<br>
-i think age regression is valid, because it really is important for some people to find their purity and innocence again.. and i still really like being into agere activities and stuff, but i don't consider myself into the "little space" thing ( i'm talking about non kink age regression, i'm just using the expression.. ) because if so, i would constantly be into it, and the thing about regression is exactly the contrast between feeling adult and childish.<br>
-i have matured a lot and learned things through the time, but the way i see the world and my personality definitively is the same as ever, because this is exactly what i value !<br>
-when i think about myself with 8 years old, i can see clearly that i'm the same, and will always be. i don't need to regress.<br>
-i want to keep myself pure and innocent, imaginative, positive.. i always try my best to remain all the good important things about myself, even if sometimes i have to be really adult and strong, i'm still being myself all the time.. i'll never change, just mature and get better and smarter !!<br>
-i can be an adult and still be the same as always, just changing moods and choosing important personality traits for each situation ! i can have childish interests, because my interests are important, it doesn't matter if it's childish.. i also have lots of grandma interests like embroidery, baking, and i know i'm not a grandma ( yet )<br>
-of course adult stuff is really stressful, so bubu always help me.. he takes care of me. is he my caregiver ? yes, but i also take care of him ! we always help each other in everything ♡<br>
-since i've remained the same, i don't feel the need to regress, because i'm already regressed. i'm just myself.. always !<br>
-if you have a hard time being yourself and feeling comfortable about your interests, personality and behavior, don't feel guilty about regressing.. there will be this contrast between feeling big and small that will make you feel like wanting to regress all the time, but someday you'll also feel always just like yourself, and be really happy about it ♡ !<br>
-it is possible to be pure, innocent, happy and comfy even as an adult.. and i'm trying my best to get there !!!<br>
-<br>
-<br>
-<br>
-　ଢ ⅱ<br>
-the meaning of things is usually something melancholy to think about, since although things all happen with a reason, these reasons are so vague and neutral that they don't satisfy us. things happen because they need to happen, but they can be painful and it's impossible to stop the pain. for example, we feel sad if we are lonely, but we also feel sad if we love people and they are gone ( and one day they will ). it's inevitable.<br>
-but i don't like to think of things in a pessimistic way, so i've always focused on something that i call "my role in life". this is what i must fulfill and that is what motivates me every day. it's something very simple, but at the same time so complicated.. to be happy.<br>
-nothing in life makes sense if you're not happy, but anything and everything becomes magical if you feel happy. it doesn't really matter if that was fate or not, if happiness is just chemical produced by your brain, because the feeling is magical and welcoming. all good feelings : excitement, comfort, satisfaction, passion.. all of them are the goals in our lives. if nature has given us such good feelings to encourage us to keep going, i believe that is what we should do.<br>
-i realized that to achieve my happiness i must have a pure heart, full of love.. i need innocence to enjoy all the wonderful little things of life in complitude. if i had been born in different living conditions, with another DNA, i certainly would not be the one i know today. i would not have learned or experienced the same things, so i would be someone else ; but that doesn't diminish for me the importance of purity. it's not about fitting into some pattern of pure and perfect angel, but rather embracing with all your heart all that your life has offered you until today and thereby forming your personality in the most positive way possible. every single person have purity, every one may be the best within one's own existence.<br>
-something that makes me truly happy is to be able to teach how to be the best version of yourself, spreading happiness, love and sharing everything i've learned to this day. although i can't reach many people, although i can't really interfere with their lives and make them happy, i do my best. i want to continue to the end of my life being as happy as i can and helping other people as much as i can, especially the ones i love.<br>
-some people will never learn to be happy, some people will never truly love. perhaps, the life given them did not bring enough information. maybe they just have a different way of seeing life. i believe it doesn't matter the way you see things, your personality or your appearance, for these are just consequences of your life, easily moldable. what matters is that inside your heart you can feel the warmth and magic that is love. if you love, you can become better, there is hope ♡ !<br>
-<br>
-mm i'd like to thank you, if you really read everything i write ..<br>
-means a lot to me ; ; ♡<br>
-this is my valentine's day gift for you :<br>
-<br><br>
-<center><img src="https://i.imgur.com/MddDYVL.gif"/> <img src="https://i.imgur.com/Y8cquIr.gif"/></center>
-<br>
-xoxo <img src="https://i.imgur.com/XiLs9ld.gif"/><br>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img width="200px" height="auto" src="https://i.imgur.com/YkqQ29Z.png"/><img width="200px" height="auto" src="https://i.imgur.com/YkqQ29Z.png"/></center>
-
-<br><br><br>
 
 <br>
 <center><a id="linkbjinho" href="/archive" style="text-decoration: none; color:#ddb5b5;">archive +</a></center>
