--- a/archive.html
+++ b/archive.html
@@ -308,6 +308,98 @@ font-family: Verdana;">
 
 <br>
 
+<center><img width="200px" height="auto" src="https://i.imgur.com/1ZLDltw.png"/><img width="200px" height="auto" src="https://i.imgur.com/1ZLDltw.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>january . 22 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <img src="https://i.imgur.com/xurNJep.gif"/><br>
+it's 2019 !!!<br>
+i hope this year is full of happy memories for all of us ♡<br>
+i took a while to have the energy to do this post, i'm in a bad phase ; ;<br>
+summer is a hard time for me, especially when it comes to sleep ..<br>
+my sleep routine is a mess, i'm tired all day <img src="https://i.imgur.com/Oo6x07s.gif"/><br>
+i want to improve it.. i want to feel more energetic so i can do my projects !!<br>
+<br>
+anyway, i'm feeling happy ♡<br>
+i went through some sad moments but with the support of my loved ones i was able to overcome all this and to learn many things <img src="https://i.imgur.com/XBEw3Wi.gif"/><br>
+i know all difficulties are important because it's with them that we face problems, fears and insecurities and we improve !!!<br>
+if you are going through something hard now, remember this.. everything will be better soon !<br>
+<br>
+i have today to show you a collage that i'm very proud of <img src="https://i.imgur.com/piFKEDh.gif"/><br>
+i've been saving images with this aesthetic for a loooong time, i love this theme of strawberries and hearts ♡ !<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/jxvycdQ.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/x3u0nk.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">strawberry valentine html .rar</font></a>　</center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+valentine's day is coming so red and pink are important colors at the moment !!!<br>
+don't forget to use this time to spread love and take care of yourself <img src="https://i.imgur.com/zYcEkWe.gif"/><br>
+<br>
+lately for being with low energy, i didn't do many things ; ;<br>
+but i'm super into dress up games, so i spent a lot of time playing with them !<br>
+these entertain me for hours .. <img src="https://i.imgur.com/VTHXdXA.gif"/><br>
+i want to show you my favorite "me" of the moment ///<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/OMqmwT8.png"/></center>
+
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+so.. double q&a !!<br>
+the first one will be a complement to something i've written before, about age regression. the second one will be about "role in life" ♡<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+　ଢ ⅰ<br>
+i've been thinking about age regression lately, because i really am into all kind of age regression activities and stuff.. but i still know that i don't really age regress, because i'm always like it.<br>
+i don't really feel a difference when i'm coloring or eating using a cute spoon, because it's just my personality. i could say everytime i'm feeling comfy i'm regressed, but i don't really feel it as a thiiing, because it's just who i am.. !<br>
+i think age regression is valid, because it really is important for some people to find their purity and innocence again.. and i still really like being into agere activities and stuff, but i don't consider myself into the "little space" thing ( i'm talking about non kink age regression, i'm just using the expression.. ) because if so, i would constantly be into it, and the thing about regression is exactly the contrast between feeling adult and childish.<br>
+i have matured a lot and learned things through the time, but the way i see the world and my personality definitively is the same as ever, because this is exactly what i value !<br>
+when i think about myself with 8 years old, i can see clearly that i'm the same, and will always be. i don't need to regress.<br>
+i want to keep myself pure and innocent, imaginative, positive.. i always try my best to remain all the good important things about myself, even if sometimes i have to be really adult and strong, i'm still being myself all the time.. i'll never change, just mature and get better and smarter !!<br>
+i can be an adult and still be the same as always, just changing moods and choosing important personality traits for each situation ! i can have childish interests, because my interests are important, it doesn't matter if it's childish.. i also have lots of grandma interests like embroidery, baking, and i know i'm not a grandma ( yet )<br>
+of course adult stuff is really stressful, so bubu always help me.. he takes care of me. is he my caregiver ? yes, but i also take care of him ! we always help each other in everything ♡<br>
+since i've remained the same, i don't feel the need to regress, because i'm already regressed. i'm just myself.. always !<br>
+if you have a hard time being yourself and feeling comfortable about your interests, personality and behavior, don't feel guilty about regressing.. there will be this contrast between feeling big and small that will make you feel like wanting to regress all the time, but someday you'll also feel always just like yourself, and be really happy about it ♡ !<br>
+it is possible to be pure, innocent, happy and comfy even as an adult.. and i'm trying my best to get there !!!<br>
+<br>
+<br>
+<br>
+　ଢ ⅱ<br>
+the meaning of things is usually something melancholy to think about, since although things all happen with a reason, these reasons are so vague and neutral that they don't satisfy us. things happen because they need to happen, but they can be painful and it's impossible to stop the pain. for example, we feel sad if we are lonely, but we also feel sad if we love people and they are gone ( and one day they will ). it's inevitable.<br>
+but i don't like to think of things in a pessimistic way, so i've always focused on something that i call "my role in life". this is what i must fulfill and that is what motivates me every day. it's something very simple, but at the same time so complicated.. to be happy.<br>
+nothing in life makes sense if you're not happy, but anything and everything becomes magical if you feel happy. it doesn't really matter if that was fate or not, if happiness is just chemical produced by your brain, because the feeling is magical and welcoming. all good feelings : excitement, comfort, satisfaction, passion.. all of them are the goals in our lives. if nature has given us such good feelings to encourage us to keep going, i believe that is what we should do.<br>
+i realized that to achieve my happiness i must have a pure heart, full of love.. i need innocence to enjoy all the wonderful little things of life in complitude. if i had been born in different living conditions, with another DNA, i certainly would not be the one i know today. i would not have learned or experienced the same things, so i would be someone else ; but that doesn't diminish for me the importance of purity. it's not about fitting into some pattern of pure and perfect angel, but rather embracing with all your heart all that your life has offered you until today and thereby forming your personality in the most positive way possible. every single person have purity, every one may be the best within one's own existence.<br>
+something that makes me truly happy is to be able to teach how to be the best version of yourself, spreading happiness, love and sharing everything i've learned to this day. although i can't reach many people, although i can't really interfere with their lives and make them happy, i do my best. i want to continue to the end of my life being as happy as i can and helping other people as much as i can, especially the ones i love.<br>
+some people will never learn to be happy, some people will never truly love. perhaps, the life given them did not bring enough information. maybe they just have a different way of seeing life. i believe it doesn't matter the way you see things, your personality or your appearance, for these are just consequences of your life, easily moldable. what matters is that inside your heart you can feel the warmth and magic that is love. if you love, you can become better, there is hope ♡ !<br>
+<br>
+mm i'd like to thank you, if you really read everything i write ..<br>
+means a lot to me ; ; ♡<br>
+this is my valentine's day gift for you :<br>
+<br><br>
+<center><img src="https://i.imgur.com/MddDYVL.gif"/> <img src="https://i.imgur.com/Y8cquIr.gif"/></center>
+<br>
+xoxo <img src="https://i.imgur.com/XiLs9ld.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img width="200px" height="auto" src="https://i.imgur.com/YkqQ29Z.png"/><img width="200px" height="auto" src="https://i.imgur.com/YkqQ29Z.png"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/B3llkOg.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
