--- a/blog.html
+++ b/blog.html
@@ -317,7 +317,7 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
-<center><img src="https://i.imgur.com/4VMQGEr.gif"/></center>
+<center><img src="https://i.imgur.com/02mv4Oo.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
 <center>april . 30 . 2019</center>
@@ -395,13 +395,13 @@ by the way i really don't care about the reputation of the places on the interne
 mm.. people can be very judgmental with some places on the internet without any real experience so i think it's fair to give my opinions about it !<br>
 <br>
 <br>
-xoxo <img src="https://i.imgur.com/UnX4t5Q.gif"/><br>
+xoxo <img src="https://i.imgur.com/k9ihrza.gif"/><br>
 <br><br>
 </font></font></font>
 
 <br>
 
-<center><img src="https://i.imgur.com/4VMQGEr.gif"/></center>
+<center><img src="https://i.imgur.com/02mv4Oo.gif"/></center>
 
 <br><br><br>
 
