--- a/status.html
+++ b/status.html
@@ -326,6 +326,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>05.05.19</sup></font> <font color="#bea5ce">→</font>　6 years of pure happiness ♡ !!
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>04.04.19</sup></font> <font color="#c48d8d">→</font>　vanilla ice cream melting away ~
 
 <br><br><br>
@@ -351,9 +354,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>11.22.18</sup></font> <font color="#d8abab">→</font>　aaaa i love hiiiim ; ;
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>11.08.18</sup></font> <font color="#bea5ce">→</font>　lots of ideas, little time...
 
 
 </div>
