--- a/fashion.html
+++ b/fashion.html
@@ -333,6 +333,11 @@ p { margin: 0; }
 <center>
 
 <br><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 05.09.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/iM3EPm2.png"/><br>
+<br>
+
+<br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 04.13.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/d1SFjPO.png"/><br>
 <br>
@@ -382,10 +387,6 @@ p { margin: 0; }
 <br>
 
 
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 06.07.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/IWRM6XL.png"/><br>
-<br>
 
 
 
