--- a/gaming.html
+++ b/gaming.html
@@ -694,9 +694,9 @@ p { margin: 0; }
 <div id="spoiler9" class="spoiler-area is-closed9">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<img width="250px" height="auto" src="https://i.imgur.com/2Nnk3a9.png"/>
+<img width="300px" height="auto" src="https://i.imgur.com/2hnKIp6.jpg"/>
 <br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/POjQiSO.png"/>
+<img width="300px" height="auto" src="https://i.imgur.com/0N5e0w1.png"/>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
@@ -871,7 +871,7 @@ p { margin: 0; }
 <div id="spoiler1-0" class="spoiler-area is-closed1-0">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<center><img src="https://i.imgur.com/pO3cqqE.png"/></center><br>
+<center><img src="https://i.imgur.com/Iihj9yu.png"/></center><br>
 <font style="color:#af8c8c; font-size:10px; line-height:13px;">
 　　　　　　　　　　　name : <font style="font-size:11px">♡</font> woof <font style="font-size:11px">♡</font><br>
 　　　　　　　　　　　bday : 03.26.19<br>
