--- a/credits.html
+++ b/credits.html
@@ -55,9 +55,7 @@ background-color: #f9f0ed;
 border: 1px dotted #e2d5d0;
 }
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-</style>
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
 
 <!--
 tooooooooltip
@@ -273,9 +271,7 @@ z-index: 3;
 
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
-
-　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
@@ -407,7 +403,7 @@ moveupvar=setTimeout("moveup()",20)
 </font></font></font>
 <font family = "Verdana"><font color="#B3A49A"><font size="1">
 <font size="2">※</font> i'll update this list whenever i change a hosting.<br>
-<font size="2">※</font> these sites are safe and all of them use https. privacy policy and use of cookies should be checked on the related websites.</font></font></font><br><br><br>
+<font size="2">※</font> these sites are safe and all of them use https. privacy policy and use of cookies should be checked on the related websites.</font></font></font><br><br><br><br>
 
 <font family = "Verdana"><font color="#ddb5b5"><font size="1">
 　　[ important safety tips ]<br><br></font>
@@ -419,6 +415,16 @@ if you don't like javascript or flash, you can disable it too in your browser se
 also, i sugest you to use an extension for encryption ( <i>https everywhere</i> is what i use ). i try to keep everything encrypted, but sometimes ssl certificates can expire and take a while to be renewed.. !<br>
 <br>
 i always try to keep the visitors safe and privacy is something i respect, so please, any issues feel free to contact me !
+<br><br>
+</font></font></font></font>
+<font family = "Verdana"><font color="#ddb5b5"><font size="1"><br><br>
+　　[ important accessibility tips ]<br><br></font>
+<font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
+if you're on pc and you think the font size is too small please zoom in a little in your browser !<br>
+usually any font bigger than 10px is uncomfortable for me to read. i keep most websites 75% zoom out because of it.. i would like to make my website accessible for everyone, but i believe it should be accessible for myself first, i'm sorry ; ;<br>
+if the font colors seem too light for you to read i believe a little of zoom in and screen brightness adjust can help ! i can't really change the font colors because it would ruin the whole aesthetic of the website... again, i'm sorry.<br>
+i try to make my layouts compatible for all screen sizes but it's a little hard to do it with image based layouts, like mine. if you're on mobile i suggest you turn your device horizontally for better compatibility !!<br><br>
+thank you for your patience.<br>
 </font></font></font></font>
 <br><br><br>
 
